# aovivo-zero-ao-deploy

./: .dockerignore  .env  .gitignore  README.md  app.py  app_01.py  app_02.py  diferentes_arquivos.py  duckdb.db  historico_arquivos.duckdb  pipeline_00_etl.py  pipeline_01.py  pipeline_01_avoid_multiple.py  pipeline_02.py  pipeline_02_diferente_arquivos.py  pipeline_03_pipeline.py  pipeline_04_logs.py  pipeline_05_to_many.py  pyproject.toml
data/: vendas_12_03_2024.csv  vendas_13_03_2024.csv
sql/: create_table.sql
